# AstrBot-PracticalPluginCollection

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  _conf_schema.json  entry.py  main.py  metadata.yaml  pyproject.toml  requirements.txt
core/: __init__.py  ban.py  economic.py
core/ban/: command.py  db.py  main.py
core/bank/: command.py  db.py
core/economic/: command.py  db.py
module/: __init__.py
module/daily_luck/: db.py  main.py
module/group_request_review/: log.py  main.py
module/send_like/: main.py
module/welcome_goodbye/: main.py
utils/: function.py
utils/api/: api.py
utils/message/: msg.py
