[project]
name = "AstrBot-Practical-Plugin-Collection"
version = "0.2.2"
description = "AstrBot 实用插件合集"
readme = "README.md"
requires-python = "~=3.12.0"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = ["aiosqlite>=0.22.1", "astrbot>=4.17.6"]

[dependency-groups]
dev = ["ruff>=0.15.13"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
